apps/utilities/atuin/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: atuin
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9001
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: atuin
    spec:
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:18.23.0 # {"$imagepolicy": "atuin:atuin"}
          imagePullPolicy: Always
          args:
            - start
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: metrics
              containerPort: 9001
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: atuin-pvc
              mountPath: /config
      volumes:
        - name: atuin-pvc
          persistentVolumeClaim:
            claimName: atuin-pvc
